<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/sNameEditText"
        android:layout_width="370sp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="24dp"
        android:elegantTextHeight="false"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/sEmailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/sEmailEditText"
        android:layout_width="370sp"
        android:layout_height="49dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/sPhoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sNameEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/sPhoneEditText"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/sAddressEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sEmailEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/sAddressEditText"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/sPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sPhoneEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/sPasswordEditText"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/sConfirmPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sAddressEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/sConfirmPasswordEditText"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPersonName|textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/sSignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sPasswordEditText"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/sSignUpButton"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="143dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sConfirmPasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>